--- a/vivliografiki/samplebody-conf.tex
+++ b/vivliografiki/samplebody-conf.tex
@@ -1,14 +1,6 @@
 \section{Introduction}
 
-The \textit{proceedings} are the records of a conference.\footnote{This
-  is a footnote}  ACM seeks
-to give these conference by-products a uniform, high-quality
-appearance.  To do this, ACM has some rigid requirements for the
-format of the proceedings documents: there is a specified format
-(balanced double columns), a specified set of fonts (Arial or
-Helvetica and Times Roman) in certain specified sizes, a specified
-live area, centered on the page, specified size of margins, specified
-column width and gutter size.
+Nowdays, social networks is a a very popular and powerful tool for expressing opinions, broadcasting news, and simply communicating with friends. People often comment on events in real time, with several hundred micro-blogs especially in Twitter(tweets) posted each second for significant events. 
 
 \section{The Body of The Paper}
 Typically, the body of a paper is organized into a hierarchical
