Chapter of Introduction

--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -259,7 +259,11 @@ is available on the web page to help you with the
 \keywords{ACM proceedings; \LaTeX; text tagging}
 
 \section{Introduction}
-Nowdays, the World Wide Web has transformed from a large, static library that people only browse into a vast and dynamic information resource. Relying on this, social networks is a a very popular and powerful tool for expressing opinions, broadcasting news, and simply communicating with friends. People often comment on events in real time, with several hundred micro-blogs posted each second for significant events. The most popular micro-blogging service is Twitter. Twitter collects millions of real-time short text messages (known as tweets) every second. These messages are not only raw data, but they can be manipulated efficiently to provide the community with the top trending topics of the Twitter. Topic detection has also instant impact on the world, through the quick transmission of the news and necessary briefing in some cases. With the passage of time and the effect of more and more users the topic acquire more popularity and lead to another great result, the event summarization. The massive crowd keeps close pace with the development of trending topics and provide the timely updated information.
+Nowdays, the World Wide Web has transformed from a large, static library that people only browse into a vast and dynamic information resource. Relying on this, social networks is a a very popular and powerful tool for expressing opinions, broadcasting news, and simply communicating with friends. People often comment on events in real time, with several hundred micro-blogs posted each second for significant events. The most popular micro-blogging service is Twitter. The popularity of Twitter stems from its availability on a number of different electronic devices (e.g., web, cell phones, etc.), as well as the prevalence of a subculture in Twitter that encourages users to acquire a large friend pool, as well as send tweets on a wide variety of subjects, typically several times a day. Twitter collects millions of real-time short text messages (known as tweets) every second. These messages are not only raw data, but they can be manipulated efficiently to provide the community with the top trending topics of the Twitter. Tweets also have a mechanism by which the user can link to other objects on the web such as articles, images or videos which is typically used to link tweets to related material on the Internet. Thereafter, the first result is that the size of information is multiplied and the variety of references is bigger, as well. Topic detection has also instant impact on the world, through the quick transmission of the news and necessary briefing in some cases. 
+
+With the passage of time and the effect of more and more users the topic acquire more popularity. Through this phenomenon we can form a general summarization of the event. This process is called Event Summarization. The massive crowd keeps close pace with the development of trending topics and provide the timely updated information. Twitter has shown its powerful ability in information delivery in many events, like the wildfires in San Diego and the earthquake in Japan. 
+
+
 
 \section{The {\secit Body} of The Paper}
 Typically, the body of a paper is organized
