--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -259,9 +259,15 @@ is available on the web page to help you with the
 \keywords{ACM proceedings; \LaTeX; text tagging}
 
 \section{Introduction}
-Nowdays, the World Wide Web has transformed from a large, static library that people only browse into a vast and dynamic information resource. Relying on this, social networks is a a very popular and powerful tool for expressing opinions, broadcasting news, and simply communicating with friends. People often comment on events in real time, with several hundred micro-blogs posted each second for significant events. The most popular micro-blogging service is Twitter. The popularity of Twitter stems from its availability on a number of different electronic devices (e.g., web, cell phones, etc.), as well as the prevalence of a subculture in Twitter that encourages users to acquire a large friend pool, as well as send tweets on a wide variety of subjects, typically several times a day. Twitter collects millions of real-time short text messages (known as tweets) every second. These messages are not only raw data, but they can be manipulated efficiently to provide the community with the top trending topics of the Twitter. Tweets also have a mechanism by which the user can link to other objects on the web such as articles, images or videos which is typically used to link tweets to related material on the Internet. Thereafter, the first result is that the size of information is multiplied and the variety of references is bigger, as well. Topic detection has also instant impact on the world, through the quick transmission of the news and necessary briefing in some cases. 
+Nowdays, the World Wide Web has transformed from a large, static library that people only browse into a vast and dynamic information resource. Relying on this, social networks is a a very popular and powerful tool for expressing opinions, broadcasting news, and simply communicating with friends. People often comment on events in real time, with several hundred micro-blogs posted each second for significant events. 
 
-With the passage of time and the effect of more and more users the topic acquire more popularity. Through this phenomenon we can form a general summarization of the event. This process is called Event Summarization. The massive crowd keeps close pace with the development of trending topics and provide the timely updated information. Twitter has shown its powerful ability in information delivery in many events, like the wildfires in San Diego and the earthquake in Japan. 
+The most popular micro-blogging service is Twitter. The popularity of Twitter stems from its availability on a number of different electronic devices (e.g., web, cell phones, etc.), as well as the prevalence of a subculture in Twitter that encourages users to acquire a large friend pool, as well as send tweets on a wide variety of subjects, typically several times a day. Twitter is attractive for capturing breaking news, as there is very little lag between the time that an event happens or is first reported in the news media and the time at which it is the subject of a posting on Twitter. Twitter collects millions of real-time short text messages (known as tweets) every second. These messages are not only raw data, but they can be manipulated efficiently to provide the community with the top trending topics of the Twitter. Tweets also have a mechanism by which the user can link to other objects on the web such as articles, images or videos which is typically used to link tweets to related material on the Internet. Thereafter, the first result is that the size of information is multiplied and the variety of references is bigger, as well. Topic detection has also instant impact on the world, through the quick transmission of the news and necessary briefing in some cases. 
+
+With the passage of time and the effect of more and more users the topic acquire much popularity. Through this phenomenon we can form a general summarization of the event. This process is called event summarization. The massive crowd keeps close pace with the development of trending topics and provide the timely updated information. Twitter has shown its powerful ability in information delivery in many events, like the wildfires in San Diego and the earthquake in Japan. In response to searches for ongoing events, today’s major search engines simply find tweets that match the query terms, and present the most recent ones. This approach has the advantage of leveraging existing query matching technologies, and for simple one-shot events such as earthquakes it works well. However, for events that have “structure” or are longrunning, and where users are likely to want a summary of all occurrences so far, this approach is often unsatisfactory.
+
+The objective of this survey is to identify some techniques of event detection. Event detection is a growing domain of reasearch. Many different species of algorithms have been detected regarding this sector. Initially, we focus on techniques that are based on text categorization. In addition, there are some methods that reclaim the display frequency of each term. The second part of the survey analyses some methods for sentiment analysis. Over this domain there are many algorithms that use machine learning. For closure, we are going to present some techniques for location extraction and an analysis for the connections of people among a social network.
+
+The reason why we present methods of identifying the place where a user sends the tweet is beacause of the strong relationship between event detection and geographical location each user belongs. Twitter is a social networking website, which means that users need not be viewed in isolation, but instead can be viewed as part of a large network of other users, user groups, and user cliques. Moreover, users have some meta-data information, such as description, source location, friends, which means that the social network structure in Twitter can aid in finding users that are most likely to tweet about news belonging to a particular geographic location or region.
 
 
 
