End of Introduction

--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -273,10 +273,15 @@ The computational treatment of opinion, sentiment, and subjectivity has recently
 
 Document-level polarity classification is not a special case of text categorization with sentiment -rather than topic- based categories. Hence, standard machine learning classification techniques, such as support vector machines (SVMs), can be applied to the entire documents themselves. Nevertherless, some researches presented a technique that it is easy to improve the accuracy, by integrating sentence-level subjectivity detection with document-level sentiment polarity.
 
-As we know, in the machine learning approach, each classifier is
-trained using a collection of representative data. In contrast, the semantic-orientation approach does not require prior training;
-instead, it measures a word containing positive or negative sentiment. Each approach has its own benefits and drawbacks. For
-example, the machine learning approach tends to be more accurate, but the semantic-orientation approach has better generality. In [...] it is presented a new lexicon-enhanced method to generate a set of sentiment words based on a sentiment lexicon as a new feature dimension. It is combined these sentiment features with content-free and content-specific features used in the existing machine-learning approach. In the evaluation stage, they showed that adding the new set of sentiment features can increase sentiment-classification performance.
+As we know, in the machine learning approach, each classifier is trained using a collection of representative data. In contrast, the semantic-orientation approach does not require prior training; instead, it measures a word containing positive or negative sentiment. Each approach has its own benefits and drawbacks. For example, the machine learning approach tends to be more accurate, but the semantic-orientation approach has better generality. In [...] it is presented a new lexicon-enhanced method to generate a set of sentiment words based on a sentiment lexicon as a new feature dimension. It is combined these sentiment features with content-free and content-specific features used in the existing machine-learning approach. In the evaluation stage, they showed that adding the new set of sentiment features can increase sentiment-classification performance.
+
+The Internet and other communication technologies play a potentially disruptive role on the constraints imposed on social networks. These technologies reduce the overhead and cost for being introduced to new people regardless of geography, and help us stay in touch with those we know. Some have even gone so far as to call this ”the end of geography,” where the process of relationship formation becomes disentangled from distance altogether.
+
+The rise of micro-blogging services spurred various applications to mine the data coming from those services. Many such applications could benefit from information about the location of users, but unfortunately location information is currently very sparse. Less than 1 per cent of tweets are geo-tagged and information available from the location field in users’ profiles is unreliable at best. Mining this people-centric sensor data promises new personalized information services, including local news summarized from tweets of nearby Twitter users, the targeting of regional advertisements, spreading business information to local customers, and novel location-based applications (e.g., Twitter-based earthquake detection, which can be faster than through traditional official channels).
+
+One direction of geoinference using social networks has produced approaches that claim to accurately locate the majority of posts within tens of kilometers of their true locations. Initially in this survey we will present an algorithm that predicts the location of an individual from a sparse set of located users with peformance that exceeds IP-based geolocation. On the side, there are also techniques that predicts locations of Twitter users at different granularities, such as city, state, or time zone, using the content of their tweets and their tweeting behavior.
+
+Getting started the first section is the presentation of some techniques that aim to event detection. The survey detects both algorithms that are based on text categorization and frequency display methods. The second chapter deals with techniques of sentiment analysis. We give more weight on techniques that use machine learning. The last chapter unfolds methods for location identification.
 
 
 \section{The {\secit Body} of The Paper}
